// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders with all props 1`] = `
<AnimateOpacity
  finalValue={1}
  initialValue={0}
  shouldAnimateIn={true}
  style={
    Object {
      "backgroundColor": "purple",
    }
  }
>
  <AnimateTranslateX
    duration={500}
    finalValue={750}
    initialValue={-200}
    shouldAnimateIn={true}
    shouldLoop={true}
    shouldRepeat={true}
    style={
      Object {
        "backgroundColor": "green",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "red",
            "height": 10,
            "width": 200,
          },
          Object {
            "backgroundColor": "blue",
          },
        ]
      }
    />
  </AnimateTranslateX>
</AnimateOpacity>
`;

exports[`Loader renders with minimum required props 1`] = `
<AnimateOpacity
  finalValue={1}
  initialValue={0}
  shouldAnimateIn={true}
>
  <AnimateTranslateX
    duration={2000}
    finalValue={750}
    initialValue={-100}
    shouldAnimateIn={true}
    shouldLoop={true}
    shouldRepeat={true}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3D84A8",
            "height": 5,
            "width": 100,
          },
          undefined,
        ]
      }
    />
  </AnimateTranslateX>
</AnimateOpacity>
`;
